--- a/_layouts/upward.html
+++ b/_layouts/upward.html
@@ -49,7 +49,7 @@
   }
 
   .cabin-title {
-      filter: grayscale(1);
+      /*filter: grayscale(1);*/
   }
 
   .cabin-title-outer {
@@ -60,7 +60,8 @@
     content: '';
     display: block;
     width: 9999px;
-    background: linear-gradient(90deg, transparent 0%, transparent 8.5%, #999 10%);
+    /*background: linear-gradient(90deg, transparent 0%, transparent 8.5%, #999 10%);*/
+    background: linear-gradient(90deg, transparent 0%, transparent 8.5%, #305f85 10%);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -74,7 +75,7 @@
   <div class="cabin-content">
     <div class="cabin-content-1">
     <div class="cabin-title-outer" style="max-width: 1000px">
-      <div class="cabin-title" style="background-image:url(https://res.cloudinary.com/deqkp2xjs/image/upload/v1544204839/images/upward.jpg);width: 100%; height: 0;padding: 0 0 38.52657%;"></div>
+      <div class="cabin-title" style="background-image:url(https://res.cloudinary.com/deqkp2xjs/image/upload/v1544204839/images/upward_vb.jpg);width: 100%; height: 0;padding: 0 0 38.52657%;"></div>
     </div>
     <div class="cabin-content-inner">
       {{ content }}
