--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   <div class="cabin-nav-inner js-mobile-links">
     <div class="cabin-service-time-secondary">
       <span class="cabin-service-time-secondary-inner">
-        9:00am First Service &middot; 10:30am Second Service       </span>
+        9:30am Connect Time &middot; 10:00am Worship Service       </span>
     </div>
     <ul class="cabin-nav-items">
       <li class="cabin-nav-item">
