--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,7 +43,7 @@
         <a href="/sermons" class=""><i class="cabin-nav-icon icon_mic_alt fa"></i>Sermons</a>
       </li>
       <li class="cabin-nav-item">
-        <a href="/upward.html" class=""><i class="cabin-nav-icon arrow_carrot-2up_alt2 fa"></i>Upward Sports</a>
+        <a href="/upward" class=""><i class="cabin-nav-icon arrow_carrot-2up_alt2 fa"></i>Upward Sports</a>
       </li>
       <li class="cabin-nav-item">
         <a href="https://app.easytithe.com/app/giving/lifepointoakdale" target="_blank"><i class="cabin-nav-icon icon_gift_alt fa"></i>Giving</a>
