--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,8 +42,19 @@
       <li class="cabin-nav-item">
         <a href="/sermons" class=""><i class="cabin-nav-icon icon_mic_alt fa"></i>Sermons</a>
       </li>
-      <li class="cabin-nav-item">
-        <a href="/upward" class=""><i class="cabin-nav-icon arrow_carrot-2up_alt2 fa"></i>Upward Sports</a>
+      <li class="cabin-nav-item cabin-nav-item-with-sub js-nav-accordion-wrapper">
+        <a href="upward" class="js-nav-accordion"><i class="cabin-nav-icon arrow_carrot-2up_alt2 fa"></i>Upward Sports</a>
+        <ul class="cabin-nav-subitems">
+          <li class="cabin-nav-item"><a href="/upward"><i class="cabin-nav-icon icon_ fa"></i>About</a></li>
+          {% assign pages_list = site.pages %}
+          {% for node in pages_list %}
+            {% if node.title != null %}
+              {% if node.parentPage == "upward" %}
+                <li class="cabin-nav-item"><a href="{{ node.url }}"><i class="cabin-nav-icon icon_{{ node.icon }} fa"></i>{{ node.nav_title }}</a></li>
+              {% endif %}
+            {% endif %}
+          {% endfor %}
+        </ul>
       </li>
       <li class="cabin-nav-item">
         <a href="https://app.easytithe.com/app/giving/lifepointoakdale" target="_blank"><i class="cabin-nav-icon icon_gift_alt fa"></i>Giving</a>
