Update service times

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
   <div class="cabin-nav-inner js-mobile-links">
     <div class="cabin-service-time-secondary">
       <span class="cabin-service-time-secondary-inner">
-        9:30am Connect Time &middot; 10:00am Worship Service       </span>
+          8:45am Worship Service &middot; 9:30am Connect Time <br> 10:00am Worship Service       </span>
     </div>
     <ul class="cabin-nav-items">
       <li class="cabin-nav-item">
@@ -64,6 +64,7 @@
       <strong>Sunday Service</strong>
       <p>{{ site.service_time_1 }}</p>
       <p>{{ site.service_time_2 }}</p>
+      <p>{{ site.service_time_3 }}</p>
       <p>{{ site.address }}</p>
     </div>
     <div class="cabin-nav-social-links">
