--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,7 +67,7 @@
       <div class="col-4 cabin-footer-quote">
         <div class="cabin-footer-logo"></div>
         <p class="cabin-footer-service-time">
-          {{ site.service_time_1 }} &middot; {{ site.service_time_2 }}</p>
+            {{ site.service_time_1 }} <br> {{ site.service_time_2 }} <br> {{ site.service_time_3 }}</p>
         <p>{{ site.address }}</p>
         <p>{{ site.quote }}</p>
         <p>{{ site.copyright }}</p>
